--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <br />
 <br />
 <br />
-<div class="width">Change Me to whatever content you desire</div>
+<script src='http://gitlive.com/githublive.min.js'></script>
+<script>var GithubPush = {num_old:5,nodes:['acommitteeoflunatics/kowm']}</script>
+<div id='commits'></div>
 <br />
 <br />
 <br />
