--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <center><p>
-<img src="images/acol-logo-dark-short.png" alt="a Committee of Lunatics" style="float:left"<br clear="all" />
+<img src="images/acol-logo-dark-short.png" alt="a Committee of Lunatics" style="float:left">
+<br />
 <div id="nav"><a href="about.html">About Us</a>  |  <a href="index.html" id="current">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Us</a>  |  <a href="projects.html">Current Projects</a>  |  <a href="old-projects.html">Past Projects</a></div>
 <div id="wrapper">
 <br />
