--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <center><p>
-<div class="header"><img class="noborder" src="images/acol-logo-dark-short.png" alt="a Committee of Lunatics"></div>
+<div class="header"><img id="logo" src="images/acol-logo-dark-short.png" alt="a Committee of Lunatics"></div>
 <div id="nav"><a href="about.html">About Us</a>  |  <a href="index.html" id="current">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Us</a>  |  <a href="projects.html">Current Projects</a>  |  <a href="old-projects.html">Past Projects</a></div>
 <div id="wrapper">
 <br />
