editing text in body describing kowm.

--- a/index.html
+++ b/index.html
@@ -30,32 +30,32 @@ For the record, kowm itself stands for Kobol's Own Window Manager; in like manne
 The modules themselves are to be named for the twelve colonies of man and various non-aligned colonies from the original Battlestar Galactica, circa 1978-1979.
 <br />
 <br />
-</h2>kowm</h2>
+<h2>kowm</h2>
 <hr />
 kowm ( /kōm/ ) never wanted to be anything more when she grew up than the only X window manager that even I would take home to Mom. kowm has decided that 'extensible simplicity' is the wave of the future; and we tend to agree.
 <br />
 <br />
 <br />
 <br />
-</h2>kowm-core</h2>
+<h2>kowm-core</h2>
 <hr />
 kowm-core is made up of six modular desktop libraries; five handle the basic features that make for a beautifully simple window manager and the sixth is a framework for building, attaching, and manipulating new modular extensions. Since speed is of the essence here, we're planning on writing kowm-core in C++.
 <br />
 <br />
-caprica provides low-level constructs shared by all 'windows'; including the root window.
-gemoni provide basic workspace management and functionality.
-leonis provides the graphics subsystem from which all graphics toolkit modules can hook into and manipulate objects.
-sagitara provides a basic module structure, attachment points and shared asset management funtions.
-piscera provides automatic menu generation of the system menu, the desktop menu and the application menus.
-virgon provides all remaining mid- and high-level 'window' management
+caprica provides low-level constructs shared by all 'windows'; including the root window.<br />
+gemoni provide basic workspace management and functionality.<br />
+leonis provides the graphics subsystem from which all graphics toolkit modules can hook into and manipulate objects.<br />
+sagitara provides a basic module structure, attachment points and shared asset management funtions.<br />
+piscera provides automatic menu generation of the system menu, the desktop menu and the application menus.<br />
+virgon provides all remaining mid- and high-level 'window' management<br />
 <br />
 <br />
-</h2>kowm-opts</h2>
+<h2>kowm-opts</h2>
 <hr />
 komw-opts /kōm-äpts/ currently has six additional modular libraries planned. These libraries - along with any others we think are needed - will provide additional services that, while not absolutely necessary, would probably be appreciated by the end user. These libraries will most likely be written in Ruby; however additional bindings for Python and Lua are currently on the RoadMap.
 <br />
 <br />
-</h2>kowm-apps</h2>
+<h2>kowm-apps</h2>
 <hr />
 Finally, we're planning other apps the we deem useful to the overall desktop experience. These will reside within the kowm-apps project. kowm-apps can use any language for which exists a language binding or a new one if you or a friend have the knowledge to write one; don't fret too much, it's not a difficult task. That being said, we definitely are expecting the first few to be all Ruby.
 <br />
