adding image about-mavosxwm.png

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 Having searched for many years for a usable Linux window manager that both appealed to my sense of aesthetics and had at least some of the features I feel necessary for a 'proper' WM; in all that time I only came across one which, at least partially, fit the bill.
 <br />
 <br />
-mavosxwm was the creation of Martin Vollrathson and hadn't been updated since sometime in 2003. His website for mavosxwm has long since stopped working; but here is an image of the about page that I have managed to find.
+mavosxwm was the creation of Martin Vollrathson and hadn't been updated since sometime in 2003. His website for mavosxwm has long since stopped working; but here is an image of the about page that I have managed to find:
 <br />
+<img src="images/ mavosxwm-about.png" alt="about mavsoxwm">
 <br />
 After obtaining permission from him in 2007, I forked Mavosxwm v0.2.1 to use as the base from which I will write kowm. I will be recycling and rearranging some of its parts and pieces; these bits are, even now, making their way into various locations in kowm-core.
 <br />
