adding image about-mavosxwm.png

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ mavosxwm was the creation of Martin Vollrathson and hadn't been updated since so
 <center><img src="images/mavosxwm-about.png" alt="about mavsoxwm"></center>
 <br />
 <br />
+I, like Martin, am quite insane; but I digress...
+<br />
+<br />
 After obtaining permission from him in 2007, I forked Mavosxwm v0.2.1 to use as the base from which I will write kowm. I will be recycling and rearranging some of its parts and pieces; these bits are, even now, making their way into various locations in kowm-core.
 <br />
 <br />
