adding unordered list of kowm-core modules

--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@ kowm ( /kōm/ ) never wanted to be anything more when she grew up than the only 
 kowm-core is made up of six modular desktop libraries; five handle the basic features that make for a beautifully simple window manager and the sixth is a framework for building, attaching, and manipulating new modular extensions. Since speed is of the essence here, we're planning on writing kowm-core in C++.
 <br />
 <br />
-caprica provides low-level constructs shared by all 'windows'; including the root window.<br />
-gemoni provide basic workspace management and functionality.<br />
-leonis provides the graphics subsystem from which all graphics toolkit modules can hook into and manipulate objects.<br />
-sagitara provides a basic module structure, attachment points and shared asset management funtions.<br />
-piscera provides automatic menu generation of the system menu, the desktop menu and the application menus.<br />
-virgon provides all remaining mid- and high-level 'window' management<br />
+<ul style="list-style-type:circle">
+<li>caprica provides low-level constructs shared by all 'windows'; including the root window.</li>
+<li>gemoni provide basic workspace management and functionality.</li>
+<li>leonis provides the graphics subsystem from which all graphics toolkit modules can hook into and manipulate objects.</li>
+<li>sagitara provides a basic module structure, attachment points and shared asset management funtions.</li>
+<li>piscera provides automatic menu generation of the system menu, the desktop menu and the application menus.</li>
+<li>virgon provides all remaining mid- and high-level 'window' management</li></ul>
 <br />
 <br />
 <h2>kowm-opts</h2>
