editing for content

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ kowm ( /kōm/ ) never wanted to be anything more when she grew up than the only 
 <br />
 <h2>kowm-core</h2>
 <hr />
-kowm-core is made up of six modular desktop libraries; five handle the basic features that make for a beautifully simple window manager and the sixth is a framework for building, attaching, and manipulating new modular extensions. Since speed is of the essence here, we're planning on writing kowm-core in C++.
+kowm-core ( /kōm-kôr/ )is made up of six modular desktop libraries; five handle the basic features that make for a beautifully simple window manager and the sixth is a framework for building, attaching, and manipulating new modular extensions. Since speed is of the essence here, we're planning on writing kowm-core in C++.
 <br />
 <br />
 <ul style="list-style-type:circle">
@@ -59,12 +59,12 @@ kowm-core is made up of six modular desktop libraries; five handle the basic fea
 <br />
 <h2>kowm-opts</h2>
 <hr />
-komw-opts /kōm-äpts/ currently has six additional modular libraries planned. These libraries - along with any others we think are needed - will provide additional services that, while not absolutely necessary, would probably be appreciated by the end user. These libraries will most likely be written in Ruby; however additional bindings for Python and Lua are currently on the RoadMap.
+komw-opts ( /kōm-äpts/ ) currently has six additional modular libraries planned. These libraries - along with any others we think are needed - will provide additional services that, while not absolutely necessary, would probably be appreciated by the end user. These libraries will most likely be written in Ruby; however additional bindings for Python and Lua are currently on the RoadMap.
 <br />
 <br />
 <h2>kowm-apps</h2>
 <hr />
-Finally, we're planning other apps the we deem useful to the overall desktop experience. These will reside within the kowm-apps project. kowm-apps can use any language for which exists a language binding or a new one if you or a friend have the knowledge to write one; don't fret too much, it's not a difficult task. That being said, we definitely are expecting the first few to be all Ruby.
+kowm-apps ( /kōm-æps/ ) are, collectively, any apps written using the kowm libraries; these are usually intended to be optionally included with any working kowm-desktop if a user so desires. These will reside within the kowm-apps project. kowm-apps can use any language for which exists a language binding or a new one if you or a friend have the knowledge to write one; don't fret too much, it's not a difficult task. That being said, we definitely are expecting the first few to be all Ruby.
 <br />
 <br />
 <br />
