--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 Having searched for many years for a usable Linux window manager that both appealed to my sense of aesthetics and had at least some of the features I feel necessary for a 'proper' WM; in all that time I only came across one which, at least partially, fit the bill.
 <br />
 <br />
-mavosxwm was the creation of Martin Vollrathson and hadn't been updated since sometime in 2003. His website for mavosxwm has long since stopped working; but here is an image of the about page that I have managed to find:
+mavosxwm was the creation of Martin Vollrathson and hadn't been updated since sometime in 2003. The mavosxwm website has long since stopped functioning; but below is the only image of the about page that I have managed to find. All information in the image can be considered his intellectual property and is used here only for informational purposes.
 <br />
 <br />
 <center><img src="images/mavosxwm-about.png" alt="about mavsoxwm"></center>
