--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="header"><img id="logo" src="images/acol-logo-dark-short.png" alt="a Committee of Lunatics"></div>
 <br />
 <br />
-<div id="nav"><a href="about.html">About Us</a>  |  <a href="index.html" id="current">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Us</a>  |  <a href="projects.html">Current Projects</a>  |  <a href="old-projects.html">Past Projects</a></div>
+<div id="nav"><a href="http://www.acommitteeoflunatics.com/about.html">About Us</a>  |  <a href="http://kowm.acommitteeoflunatics.comindex.html" id="current">Home Page</a>  |  <a href="http://www.acommitteeoflunatics.com/weblog.html">Blog Entries</a>  |  <a href="http://www.acommitteeoflunatics.com/contact.html">Contact Us</a>  |  <a href="http://www.acommitteeoflunatics.com/projects.html">Current Projects</a>  |  <a href="http://www.acommitteeoflunatics.com/old-projects.html">Past Projects</a></div>
 <div id="wrapper">
 <br />
 <br />
@@ -20,10 +20,10 @@
 Having searched for many years for a usable Linux window manager that both appealed to my sense of aesthetics and had at least some of the features I feel necessary for a 'proper' WM; in all that time I only came across one which, at least partially, fit the bill.
 <br />
 <br />
-mavosxwm was the creation of Martin Vollrathson and hadn't been updated since sometime in 2003. The mavosxwm website has long since stopped functioning; but below is the only image of the about page that I have managed to find. All information in the image can be considered his intellectual property and is used here only for informational purposes.
+<a href="mavosxwm.sourceforge.net">mavosxwm</a> was the creation of Martin Vollrathson and hadn't been updated since sometime in 2003. The mavosxwm website, except for the outdated news page has long since stopped functioning; but below is the only image of the about page that I have managed to find. All information in the image, and in fact the image itself, can be considered his intellectual property and is used here only for informational purposes.
 <br />
 <br />
-<center><img src="images/mavosxwm-about.png" alt="about mavsoxwm"></center>
+<center><img class="noborder" src="images/mavosxwm-about.png" alt="about mavsoxwm"></center>
 <br />
 <br />
 I, like Martin, am quite insane; but I digress...
@@ -40,14 +40,14 @@ The modules themselves are to be named for the twelve colonies of man and variou
 <br />
 <h2>kowm</h2>
 <hr />
-kowm ( /kōm/ ) never wanted to be anything more when she grew up than the only X window manager that even I would take home to Mom. kowm has decided that 'extensible simplicity' is the wave of the future; and we tend to agree.
+<a href="http://kowm.acommitteeoflunatics.com">kowm</a> ( /kōm/ ) never wanted to be anything more when she grew up than the only X window manager that even I would take home to Mom. kowm has decided that 'extensible simplicity' is the wave of the future; and we tend to agree.
 <br />
 <br />
 <br />
 <br />
 <h2>kowm-core</h2>
 <hr />
-kowm-core ( /kōm-kôr/ ) is made up of six modular desktop libraries; five handle the basic features that make for a beautifully simple window manager and the sixth is a framework for building, attaching, and manipulating new modular extensions. Since speed is of the essence here, we're planning on writing kowm-core in C++.
+<a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a> ( /kōm-kôr/ ) is made up of six modular desktop libraries; five handle the basic features that make for a beautifully simple window manager and the sixth is a framework for building, attaching, and manipulating new modular extensions. Since speed is of the essence here, we're planning on writing kowm-core in C++.
 <br />
 <br />
 <ul style="list-style-type:circle">
@@ -61,12 +61,12 @@ kowm-core ( /kōm-kôr/ ) is made up of six modular desktop libraries; five hand
 <br />
 <h2>kowm-opts</h2>
 <hr />
-komw-opts ( /kōm-äpts/ ) currently has six additional modular libraries planned. These libraries - along with any others we think are needed - will provide additional services that, while not absolutely necessary, would probably be appreciated by the end user. These libraries will most likely be written in Ruby; however additional bindings for Python and Lua are currently on the RoadMap.
+<a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts</a> ( /kōm-äpts/ ) currently has six additional modular libraries planned. These libraries - along with any others we think are needed - will provide additional services that, while not absolutely necessary, would probably be appreciated by the end user. These libraries will most likely be written in Ruby; however additional bindings for Python and Lua are currently on the RoadMap.
 <br />
 <br />
 <h2>kowm-apps</h2>
 <hr />
-kowm-apps ( /kōm-æps/ ) are, collectively, any apps written using the kowm libraries; these are usually intended to be optionally included with any working kowm-desktop if a user so desires. These will reside within the kowm-apps project. kowm-apps can use any language for which exists a language binding or a new one if you or a friend have the knowledge to write one; don't fret too much, it's not a difficult task. That being said, we definitely are expecting the first few to be all Ruby.
+<a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a> ( /kōm-æps/ ) are, collectively, any apps written using the kowm libraries; these are usually intended to be optionally included with any working kowm-desktop if a user so desires. These will reside within the kowm-apps project. kowm-apps can use any language for which exists a language binding or a new one if you or a friend have the knowledge to write one; don't fret too much, it's not a difficult task. That being said, we definitely are expecting the first few to be all Ruby.
 <br />
 <br />
 <br />
@@ -80,7 +80,7 @@ kowm-apps ( /kōm-æps/ ) are, collectively, any apps written using the kowm lib
 <br />
 <br />
 <br />
-<center><a href="index.html">Back to the aCoL Home page</a></center>
+<center><a href="index.html">click here to go back to <i>a Committee of Lunatics</i></a></center>
 <br />
 </p></center></div>
 <center><p><div class="footer"><a href="http://validator.w3.org/check?uri=referer"><img class="noborder" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.1" height="23" width="66" border="0" align="middle" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All site contents, unless otherwise stated, are copyrighted &copy;2009-2013, Jerry W Jackson &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/"><img class="noborder" style="border:0;width:66px;height:23px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" align="middle" /></a></div></p></center>
