added linking to copyright.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <br />
 <br />
 <br />
+kowm is licensed under the 3-clause BSD license whose text can be found <a href="http://www.acommitteeoflunatics.com/copyright.html">here</a>.
 <br />
 <br />
 <br />
