--- a/kowm.html
+++ b/kowm.html
@@ -44,6 +44,11 @@ The modules themselves are to be named for the twelve colonies of man and variou
 <br />
 <br />
 <br />
+kowm is licensed under the 3-clause BSD license whose text can be found <a href="http://www.acommitteeoflunatics.com/copyright.html">here</a>.
+<br />
+<br />
+kowm, upon it's release, will include the following...
+<br />
 <br />
 <h2>kowm-core</h2>
 <hr />
