--- a/kowm.html
+++ b/kowm.html
@@ -44,7 +44,7 @@ The modules themselves are to be named for the twelve colonies of man and variou
 <br />
 <br />
 <br />
-kowm is licensed under the 3-clause BSD license whose text can be found <a href="http://www.acommitteeoflunatics.com/copyright.html">here</a>.
+kowm is licensed under the 3-clause BSD license whose text can be found <a href="http://kowm.acommitteeoflunatics.com/copyright.html">here</a>.
 <br />
 <br />
 kowm, upon it's release, will include the following...
