fixing sitewide links to kowm.html

--- a/kowm.html
+++ b/kowm.html
@@ -10,7 +10,7 @@
 <div class="header"><img id="logo" src="images/acol-logo-dark-short.png" alt="a Committee of Lunatics"></div>
 <br />
 <br />
-<div id="nav"><a href="http://www.acommitteeoflunatics.com/about.html">About Us</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html">Home Page</a>  |  <a href="http://kowm.acommitteeoflunatics.com" id="current">kowm</a>  |  <a href="http://www.acommitteeoflunatics.com/contact.html">Contact Us</a>  |  <a href="http://www.acommitteeoflunatics.com/projects.html">Current Projects</a>  |  <a href="http://www.acommitteeoflunatics.com/old-projects.html">Past Projects</a></div>
+<div id="nav"><a href="http://www.acommitteeoflunatics.com/about.html">About Us</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html">Home Page</a>  |  <a href="http://kowm.acommitteeoflunatics.com/kowm" id="current">kowm</a>  |  <a href="http://www.acommitteeoflunatics.com/contact.html">Contact Us</a>  |  <a href="http://www.acommitteeoflunatics.com/projects.html">Current Projects</a>  |  <a href="http://www.acommitteeoflunatics.com/old-projects.html">Past Projects</a></div>
 <div id="wrapper">
 <br />
 <br />
@@ -40,7 +40,7 @@ The modules themselves are to be named for the twelve colonies of man and variou
 <br />
 <h2>kowm</h2>
 <hr />
-<a href="http://kowm.acommitteeoflunatics.com">kowm</a> ( /kōm/ ) never wanted to be anything more when she grew up than the only X window manager that even I would take home to Mom. kowm has decided that 'extensible simplicity' is the wave of the future; and we tend to agree.
+<a href="http://kowm.acommitteeoflunatics.com/kowm">kowm</a> ( /kōm/ ) never wanted to be anything more when she grew up than the only X window manager that even I would take home to Mom. kowm has decided that 'extensible simplicity' is the wave of the future; and we tend to agree.
 <br />
 <br />
 <br />
