--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <head>
-<title>a Committee of Lunatics - Home</title>
+<title>kowm - Home</title>
 <style type="text/css" media="screen">@import "css/acol_base.css";</style>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="en-us">
@@ -10,14 +10,14 @@
 <div class="header"><img id="logo" src="images/acol-logo-dark-short.png" alt="a Committee of Lunatics"></div>
 <br />
 <br />
-<div id="nav"><a href="http://www.acommitteeoflunatics.com/about.html">About Us</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html" id="current">Home Page</a>  |  <a href="http://kowm.acommitteeoflunatics.com/kowm">kowm</a>  |  <a href="http://www.acommitteeoflunatics.com/contact.html">Contact Us</a>  |  <a href="http://www.acommitteeoflunatics.com/projects.html">Current Projects</a>  |  <a href="http://www.acommitteeoflunatics.com/old-projects.html">Past Projects</a></div>
+<div id="nav"><a href="http://www.acommitteeoflunatics.com/about.html">About Us</a>  |  <a href="http://www.acommitteeoflunatics.com/contact.html">Contact Us</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html" id="current">Home Page</a>  |  <a href="http://kowm.acommitteeoflunatics.com/kowm">kowm</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a></div>
 <div id="wrapper">
 <br />
 <br />
 <br />
 <h1>kowm</h1>
 <hr />
-<a href="http://kowm.acommitteeoflunatics.com/kowm">kowm</a> ( /kōm/ ) never wanted to be anything more when she grew up than the only X window manager that even I would take home to Mom. kowm has decided that 'extensible simplicity' is the wave of the future; and we here at <i>a Committee of Lunatics</i> tend to agree.
+<a href="http://kowm.acommitteeoflunatics.com/kowm.html">kowm</a> ( /kōm/ ) never wanted to be anything more when she grew up than the only X window manager that even I would take home to Mom. kowm has decided that 'extensible simplicity' is the wave of the future; and we here at <i>a Committee of Lunatics</i> tend to agree.
 <br />
 <br />
 <br />
