--- a/kowm.html
+++ b/kowm.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <head>
-<title>a Committee of Lunatics - kowm</title>
+<title>kowm - about kowm</title>
 <style type="text/css" media="screen">@import "css/acol_base.css";</style>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="en-us">
@@ -10,7 +10,7 @@
 <div class="header"><img id="logo" src="images/acol-logo-dark-short.png" alt="a Committee of Lunatics"></div>
 <br />
 <br />
-<div id="nav"><a href="http://www.acommitteeoflunatics.com/about.html">About Us</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html">Home Page</a>  |  <a href="http://kowm.acommitteeoflunatics.com/kowm" id="current">kowm</a>  |  <a href="http://www.acommitteeoflunatics.com/contact.html">Contact Us</a>  |  <a href="http://www.acommitteeoflunatics.com/projects.html">Current Projects</a>  |  <a href="http://www.acommitteeoflunatics.com/old-projects.html">Past Projects</a></div>
+<div id="nav"><a href="http://www.acommitteeoflunatics.com/about.html">About Us</a>  |  <a href="http://www.acommitteeoflunatics.com/contact.html">Contact Us</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html">Home Page</a>  |  <a href="http://kowm.acommitteeoflunatics.com/kowm" id="current">kowm</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a></div>
 <div id="wrapper">
 <br />
 <br />
