added brief info about each piece of kowm to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="header"><img id="logo" src="images/acol-logo-dark-short.png" alt="a Committee of Lunatics"></div>
 <br />
 <br />
-<div id="nav"><a href="http://www.acommitteeoflunatics.com/about.html">About Us</a>  |  <a href="http://www.acommitteeoflunatics.com/contact.html">Contact Us</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html" id="current">Home Page</a>  |  <a href="http://kowm.acommitteeoflunatics.com/kowm">kowm</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a></div>
+<div id="nav"><a href="http://www.acommitteeoflunatics.com/about.html">About Us</a>  |  <a href="http://www.acommitteeoflunatics.com/contact.html">Contact Us</a>  |  <a href="http://kowm.acommitteeoflunatics.com/index.html" id="current">kowm Overview</a>  |  <a href="http://kowm.acommitteeoflunatics.com/kowm">kowm Details</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a></div>
 <div id="wrapper">
 <br />
 <br />
@@ -24,9 +24,22 @@
 kowm is licensed under the 3-clause BSD license whose text can be found <a href="http://kowm.acommitteeoflunatics.com/copyright.html">here</a>.
 <br />
 <br />
+kowm, upon it's release, will include the following...
 <br />
 <br />
+<h2>kowm-core</h2>
+<hr />
+<a href="http://kowm-core.acommitteeoflunatics.com">kowm-core</a> ( /kōm-kôr/ ) is made up of six modular desktop libraries; five handle the basic features that make for a beautifully simple window manager and the sixth is a framework for building, attaching, and manipulating new modular extensions. Since speed is of the essence here, we're planning on writing kowm-core in C++.
 <br />
+<br />
+<h2>kowm-opts</h2>
+<hr />
+<a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts</a> ( /kōm-äpts/ ) currently has six additional modular libraries planned. These libraries - along with any others we think are needed - will provide additional services that, while not absolutely necessary, would probably be appreciated by the end user. These libraries will most likely be written in Ruby; however additional bindings for Python and Lua are currently on the RoadMap.
+<br />
+<br />
+<h2>kowm-apps</h2>
+<hr />
+<a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps</a> ( /kōm-æps/ ) are, collectively, any apps written using the kowm libraries; these are usually intended to be optionally included with any working kowm-desktop if a user so desires. These will reside within the kowm-apps project. kowm-apps can use any language for which exists a language binding or a new one if you or a friend have the knowledge to write one; don't fret too much, it's not a difficult task. That being said, we definitely are expecting the first few to be all Ruby.
 <br />
 <br />
 <br />
