--- a/kowm.html
+++ b/kowm.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>kowm - about kowm</title>
+<title>kowm - kowm-details</title>
 <style type="text/css" media="screen">@import "css/acol_base.css";</style>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="Content-Language" content="en-us">
+<meta charset="utf-8">
 </head>
 <body>
-<center><p>
 <div class="header"><img id="logo" src="images/acol-logo-dark-short.png" alt="a Committee of Lunatics"></div>
 <br />
 <br />
