changing over to the new light theme.

--- a/kowm.html
+++ b/kowm.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>kowm - kowm Details</title>
-<style type="text/css" media="screen">@import "css/acol_base.css";</style>
+<style type="text/css" media="screen">@import "css/acol_light.css";</style>
 <meta charset="utf-8">
 </head>
 <body>
-<div class="header"><img id="logo" src="images/acol-logo-dark-short.png" alt="a Committee of Lunatics"></div>
+<div class="header"><img id="logo" src="images/logo-left.png" alt="a Committee of Lunatics"></div>
 <br />
 <br />
 <div id="nav"><a href="http://kowm.acommitteeoflunatics.com/index.html">kowm Overview</a>  |  <a href="http://kowm.acommitteeoflunatics.com/kowm.html" id="current">kowm Details</a>  |  <a href="http://kowm-core.acommitteeoflunatics.com">kowm-core Overview</a>  |  <a href="http://kowm-opts.acommitteeoflunatics.com">kowm-opts Overview</a>  |  <a href="http://kowm-apps.acommitteeoflunatics.com">kowm-apps Overview</a></div>
